--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="price">
       <div class="community">
         <h2>Join our community</h2>
-        <h3>30-day, hassle-free money back guarantee</h3>
+        <div class="subtitle">30-day, hassle-free money back guarantee</div>
         <p>
           Gain access to our full library of tutorials along with expert code
           reviews. Perfect for any developers who are serious about honing their
@@ -42,7 +42,7 @@
         </p>
       </div>
       <div class="subscription">
-        <h2>Monthly Subscription</h2>
+        <h3>Monthly Subscription</h3>
         <div class="subscription__price">
           <span>&dollar;29 </span> per month
         </div>
@@ -50,7 +50,7 @@
         <a href="#"> Sign Up </a>
       </div>
       <div class="why">
-        <h2>Why Us</h2>
+        <h3>Why Us</h3>
         <ul>
           <li>Tutorials by industry experts</li>
           <li>Peer &amp; expert code review</li>
