--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="subscription">
         <h3>Monthly Subscription</h3>
         <div class="subscription__price">
-          <span>&dollar;29 </span> per month
+          &dollar;29 <span> per month</span>
         </div>
         <p>Full access for less than &dollar;1 a day</p>
         <a href="#"> Sign Up </a>
@@ -62,14 +62,14 @@
         </ul>
       </div>
     </section>
-
+    
     <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
+    <p class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Enze Zhao</a>.
     </footer>
+    </p>
   </body>
 </html>
